adding canvas animations

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@
 title: Jekyll-base
 description:
 tagline:
-url: http://localhost:3000
+url: http://astir.ninja 
+  #http://localhost:3000
 canvasLocation: /assets/canvas
 
 source: src
