--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -14,6 +14,7 @@ en:
     variantClasses: ""
     layout: "layout-two-column"
     id: "about"
+    mobileImage: ""
     includeArea: "company/production-capacity-evolution.html"
   history:
     title: "Traditionally Innovative Since 1953"
@@ -41,6 +42,7 @@ en:
     variantClasses: ""
     layout: "layout-two-column"
     id: "facts"
+    mobileImage: ""
     includeArea: "company/revenues-evoution.html"
   team:
     title: "Our people our strength"
@@ -59,6 +61,7 @@ en:
     variantClasses: ""
     layout: "layout-two-column"
     id: "global-reach"
+    mobileImage: ""
     includeArea: "company/global-reach-map.html"
   clients:
     title: "Crowning the world's favourite brands"
