--- a/src/_data/facilities.yml
+++ b/src/_data/facilities.yml
@@ -29,10 +29,11 @@ en:
     title_variantClasses: "title--large"
     subtitle: "SUSTAINABLE DEVELOPMENT"
     body: "In a market where competitive edges are really marginal, we simply make the difference. Our direct customer approach philosophy, the unique flexibility and adaptability of the manufacturing process enables us to address extraordinary requests, optimise distance and time factors and maximize customer satisfaction. All phases of the manufacturing process are vertically integrated. Our in-house prepress department, printing, quality control, packaging and shipping are fine-tuned to guarantee on time delivery at the shortest lead times. Once we receive the artwork and order, everything mobilizes. A creative team develops your artwork and the PDF file is approved in as little as 24 hours. Your batch is scheduled and produced to perfection and be it ground, sea or air transportation, outstanding fault free crown caps arrive to your production line ready to use, in a best value for money and time ratio."
-    image: "/images/facilities/3.jpg"
     variantClasses: "slice-with-image-on-right"
     layout: "layout-two-column"
     id: "sustainable"
+    mobileImage: "/images/facilities/3.jpg"
+    includeArea: "facilities/thinkgreen.html"
 el:
   production:
     title: "Ελληνικα State of the art plant"
