--- a/src/_data/crown.yml
+++ b/src/_data/crown.yml
@@ -20,7 +20,7 @@ en:
     bgImagePosition: "left top"
     bgImageSize: "60% auto"
     id: "crown-corks"
-    mobileImage: ""
+    mobileImage: "/images/corks/anatomy.png"
     includeArea: "crown/anatomy.html"
   exterior-side:
     title: "Steel"
