--- a/src/_data/packaging.yml
+++ b/src/_data/packaging.yml
@@ -1,39 +1,39 @@
 ---
 en:
   0:
-    variantClasses: "text--centered"
+    variantClasses: "text--centered col-md-6"
     title: "10,000 pieces Carton boxes"
     title_variantClasses: "title--medium"
     body: "Stacked in palettes of 400,000 or 500,000 pieces"
     text_variantClasses: "text--small"
     image: "/images/logistics/1.jpg"
-    layout: "layout-stacked"
+    layout: ""
   1:
-    variantClasses: "text--centered"
+    variantClasses: "text--centered col-md-6"
     title: "Pallet Rows"
     title_variantClasses: "title--medium"
     body: "Each row contains: 10 cartons / 100,000 pcs"
     text_variantClasses: "text--small"
     image: "/images/logistics/2.png"
-    layout: "layout-stacked"
+    layout: ""
   2:
-    variantClasses: "text--centered"
+    variantClasses: "text--centered col-md-6"
     title: "400.000 pcs Pallet Pattern"
     title_variantClasses: "title--medium"
     body: "Net weight pallet: 840 kgs"
     text_variantClasses: "text--small"
     image: "/images/logistics/3.jpg"
-    layout: "layout-stacked"
+    layout: ""
   3:
-    variantClasses: "text--centered"
+    variantClasses: "text--centered col-md-6"
     title: "500.000 pcs Pallet Pattern"
     title_variantClasses: "title--medium"
     body: "Net weight pallet: 1,050 kgs"
     text_variantClasses: "text--small"
     image: "/images/logistics/4.jpg"
-    layout: "layout-stacked"
+    layout: ""
   4:
-    variantClasses: "text--centered"
+    variantClasses: "text--centered col-md-6"
     title: "400,000 pieces Octabins"
     title_variantClasses: "title--medium"
     body: "Mainly used in large scale orders"
@@ -41,7 +41,7 @@ en:
     image: "/images/logistics/5.jpg"
     layout: "layout-stacked"
   5:
-    variantClasses: "text--centered"
+    variantClasses: "text--centered col-md-6"
     title: ""
     title_variantClasses: "title--medium"
     body: ""
