--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-sass": "^2.0.4",
     "gulp-shell": "^0.2.9",
     "gulp-size": "^1.1.0",
+    "gulp-sourcemaps": "^2.4.1",
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^1.0.1",
