--- a/src/_data/packaging.yml
+++ b/src/_data/packaging.yml
@@ -5,7 +5,7 @@ en:
     title: "10,000 pieces Carton boxes"
     title_variantClasses: "title--medium"
     body: "Stacked in palettes of 400,000 or 500,000 pieces"
-    text_variantClasses: "text--small"
+    text_variantClasses: "text--small text--gray-colored"
     image: "/images/logistics/1.jpg"
     layout: ""
   1:
@@ -13,7 +13,7 @@ en:
     title: "Pallet Rows"
     title_variantClasses: "title--medium"
     body: "Each row contains: 10 cartons / 100,000 pcs"
-    text_variantClasses: "text--small"
+    text_variantClasses: "text--small text--gray-colored"
     image: "/images/logistics/2.png"
     layout: ""
   2:
@@ -21,7 +21,7 @@ en:
     title: "400.000 pcs Pallet Pattern"
     title_variantClasses: "title--medium"
     body: "Net weight pallet: 840 kgs"
-    text_variantClasses: "text--small"
+    text_variantClasses: "text--small text--gray-colored"
     image: "/images/logistics/3.jpg"
     layout: ""
   3:
@@ -29,7 +29,7 @@ en:
     title: "500.000 pcs Pallet Pattern"
     title_variantClasses: "title--medium"
     body: "Net weight pallet: 1,050 kgs"
-    text_variantClasses: "text--small"
+    text_variantClasses: "text--small text--gray-colored"
     image: "/images/logistics/4.jpg"
     layout: ""
   4:
@@ -37,7 +37,7 @@ en:
     title: "400,000 pieces Octabins"
     title_variantClasses: "title--medium"
     body: "Mainly used in large scale orders"
-    text_variantClasses: "text--small"
+    text_variantClasses: "text--small text--gray-colored"
     image: "/images/logistics/5.jpg"
     layout: "layout-stacked"
   5:
