--- a/src/_data/home.yml
+++ b/src/_data/home.yml
@@ -65,9 +65,9 @@ en:
     title: "The perfect closure"
     variantClasses: "on-dark-color odd viewport-height"
     layout: "layout-two-thirds"
-    buttonText: "CROWN CORKS"
+    buttonText: "WHY CROWN CORKS"
     buttonLink: "/crown-corks/"
-    buttonClasses: "btn-secondary"
+    buttonClasses: "btn-primary"
     body: "Iconic design, functional simplicity and consistent reliability."
     bgImage: "/images/homepage/Perfect-Closure-Back.jpg"
     bgImagePosition: "left top"
