adding desktop fixes

--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -53,7 +53,7 @@ en:
     id: "team"
     includeArea: "company/our-team-image-slice.html"
   global-reach:
-    title: "A truly global<br/>game play"
+    title: "A truly global game play"
     title_variantClasses: "title--large"
     subtitle: "GLOBAL REACH"
     body: "Astir crown corks are manufactured in our strategically located plants in Greece, and Canada. Our efficient and fast growing distribution network distributes our crowns to more than 700 destinations globally, in more than 45 counties across 5 continents from New Zealand to California and South Africa to Ireland. We proudly serve more than 400 different clients globally across developed, developing and emerging markets."
