--- a/src/_data/contact.yml
+++ b/src/_data/contact.yml
@@ -19,9 +19,9 @@ en:
     headquartersLabel: "ATHENS HEADQUARTERS"
     headquartersAddress: "Position Draseza, Ind. Park of Avlona,<br/>P.C. 19011, P.O. Box 16<br/>Attiki, Greece"
     footerAddress: "Position Draseza, Ind. Park of Avlona,P.C. 19011, P.O. Box 16 Attiki, Greece"
-    googleMapLink: "https://goo.gl/maps/u3RoLYafemT2"
+    googleMapLink: "https://www.google.gr/maps/place/ASTIR+Vitogiannis+Bros+S.A.+%2F+%CE%91%CE%A3%CE%A4%CE%97%CE%A1+%CE%91%CF%86%CE%BF%CE%B9+%CE%92%CF%85%CF%84%CF%8C%CE%B3%CE%B9%CE%B1%CE%BD%CE%BD%CE%B7+%CE%91.%CE%92.%CE%95./@38.295123,23.651847,15z/data=!4m5!3m4!1s0x0:0x8a23ed4355663afa!8m2!3d38.295123!4d23.651847"
     popupContent: "bla bla"
-    linkInLink: "https://www.linkedin.com/"
+    linkInLink: "https://www.linkedin.com/company/astir-vitogiannis-bros-sa"
   request:
     title: "Raise a Request"
     variantClasses: "on-brand-color"
