--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -12,7 +12,7 @@ en:
     title_variantClasses: "title--large"
     subtitle: "ABOUT ASTIR"
     body: "Astir Vitogiannis Bros S.A. is a leading crown corks manufacturer with over 60 years of experience. Operating in the crowns business for 3 generations, we combine traditional values for excellent service and strong customer relationships with in-depth knowledge of the product. We produce in our state of the art facilities, utilising innovative technology and know-how and we proudly serve the needs of the world’s favorite and largest beer and beverage brands."
-    variantClasses: ""
+    variantClasses: "js-scroll-to"
     layout: "layout-two-column"
     id: "about"
     includeArea: "company/production-capacity-evolution.html"
