--- a/src/_data/products.yml
+++ b/src/_data/products.yml
@@ -129,7 +129,7 @@ en:
     title_variantClasses: "title--large"
     subtitle: "INTERIOR PLASTIC LINER"
     counter: "01"
-    body: "Enhance consumer interaction with lottery promotions by printing unique alphanumeric codes under the liner. Our in-house developed software algorithm generates unique codes that are applied with an inkjet head on each crown cork. FDA compliant ink is used in every application."
+    body: "The classic, worldwide popular crown corks with double secure sealing lips. Pry off crown corks make excellent sealing with glass finish. Most common profiles are 916 and 923."
     bgImage: "/images/corks/Interior-Plastic-Liner-Back.jpg"
     bgImagePosition: "left top"
     bgImageSize: "70% auto"
@@ -156,7 +156,7 @@ en:
     title_variantClasses: "title--large"
     subtitle: "INTERIOR PLASTIC LINER"
     counter: "03"
-    body: "A special liner that absorbs the oxygen remaining in the bottle neck finish, decreasing the beer or beverage oxidation. Oxygen scavenger liners provide extra freshness, better taste and extended shelf life. That’s why they are strongly preferred by premium beer brands and craft breweries"
+    body: "A special liner that absorbs the oxygen remaining in the bottle neck finish, decreasing the beer or beverage oxidation. Oxygen scavenger liners provide extra freshness, better taste and extended shelf life. That’s why they are strongly preferred by premium beer brands and craft breweries."
     id: "oxygen-interior"
     group: "interior-liner"
     layout: "layout-two-column"
