--- a/src/_data/logistics.yml
+++ b/src/_data/logistics.yml
@@ -2,13 +2,13 @@
 en:
   video:
     title: "LOGISTICS"
-    subtitle: "Above the picture: Astir strives in removing uncertainties from any client’s supply chain. From order to delivery we exceed our clients expectations and provide a fully flexible unparalleled offering."
+    subtitle: "Astir strives in removing uncertainties from any client’s supply chain. From order to delivery we exceed our clients expectations and provide a fully flexible unparalleled offering."
     videomp4: "/assets/video/logistics/specifications.mp4"
     videoPoster: "/assets/video/home/home.jpg"
     videoMobilePoster: "/images/cover-images/Logistics.jpg"
     WatchFullVideo: false
   supply-chain:
-    title: "Supply Chain optimisation"
+    title: "Supply Chain Optimisation"
     title_variantClasses: "title--large"
     subtitle: "SHORT LEAD TIMES"
     body: "Maximize efficiency, eliminate distance, time and cost. Astir’s manufacturing expertise, flexibility and direct customer approach sets new standards for business credibility, product quality, lead time and after sales service.
@@ -34,7 +34,7 @@ Delivery transit time may vary depending on destination, yet our global reach ha
     title: "Certifications"
     title_variantClasses: "title--large"
     subtitle: "QUALITY STANDARDS"
-    body: "Astir’s operations and our crown corks meet the strictest and most demanding production and qualitative criteria. We are certified by international organisations for all relevant aspects of the production process and are proud to be trusted by corporate leaders that reach the majority of households globally"
+    body: "Astir’s operations and our crown corks meet the strictest and most demanding production and qualitative criteria. We are certified by international organisations for all relevant aspects of the production process and are proud to be trusted by corporate leaders that reach the majority of households globally."
     variantClasses: "text--centered"
     layout: "layout-stacked"
     id: "quality-standards"
