--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "gulp-uglify": "^1.0.1",
     "gulp-uncss": "^0.5.0",
     "gulp-useref": "^1.0.2",
-    "gulp-util": "^3.0.7",
+    "gulp-util": "^3.0.8",
     "install": "^0.7.3",
     "jshint-stylish": "^1.0.0",
     "merge-stream": "^0.1.6",
     "npm": "^3.9.0",
+    "vinyl-ftp": "^0.6.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
